# sovereign

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES_v0.0.3.md  RELEASE_NOTES_v0.0.4.md  RELEASE_NOTES_v0.0.5.md  RELEASE_NOTES_v0.0.6.md  RELEASE_NOTES_v0.0.7.md  _build.bat  _check.bat  _dev.bat  _release_build.bat  _run.bat  _test.bat  build-wasm-skills.sh  detail-ai-orchestrator.html  detail-content-skills.html  detail-ethics.html  handover-30052026.md  index.html  privacy-policy.html  requirements.csv.txt  screenshots.md  sitemap.xml  sovereign_os_implementation_plan.md  sovereign_os_specification.md  sovereign_os_ux_principles.md  sovereign_os_wireframes_1.html  todolist.md
.cargo/: audit.toml  config.toml
.claude/: settings.local.json
config/: default.toml
crates/sovereign-ai/: Cargo.toml
crates/sovereign-ai/src/: action_gate.rs  autocommit.rs  consolidation.rs  encrypted_log.rs  events.rs  injection.rs  jiminy.rs  jiminy_camera.rs  jiminy_vision.rs  lib.rs  model_integrity.rs  orchestrator.rs  reliability.rs  session_log.rs  sidecar.rs  tools.rs  trust.rs
crates/sovereign-ai/src/intent/: classifier.rs  mod.rs  parser.rs
crates/sovereign-ai/src/llm/: async_backend.rs  backend.rs  context.rs  format.rs  mod.rs  prompt.rs
crates/sovereign-ai/src/pii/: commit.rs  entity_disambig.rs  ingest.rs  mod.rs  ner.rs  pipeline.rs  regex.rs  resolve.rs
crates/sovereign-ai/src/voice/: capture.rs  jiminy_capture.rs  mod.rs  pipeline.rs  stt.rs  tts.rs  wake.rs
crates/sovereign-ai/tests/: llm_integration.rs  orchestrator_test.rs
crates/sovereign-app/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json
crates/sovereign-app/capabilities/: default.json
crates/sovereign-app/mobile-scaffold/: AndroidSharePlugin.kt  SovereignSyncPlugin.kt
crates/sovereign-app/src/: account_key_migration.rs  browser.rs  browser_pii.rs  cli.rs  commands.rs  cookie_api.rs  duress.rs  err.rs  lib.rs  llm_bridge.rs  login_throttle.rs  main.rs  pii_contact_hook.rs  pii_ingest.rs  pii_message_hook.rs  pii_share_hook.rs  pii_sweep.rs  seed.rs  setup.rs  sync_startup.rs  tauri_commands.rs  tauri_events.rs  tauri_state.rs  web.rs
crates/sovereign-app/src/tauri_commands/: ai.rs  auth.rs  backup.rs  browser.rs  canvas.rs  contacts.rs  documents.rs  mobile.rs  mod.rs  pairing.rs  pii.rs  suggestions.rs  threads.rs  voice.rs
crates/sovereign-app/tests/: cli_integration.rs
crates/sovereign-canvas/: Cargo.toml
crates/sovereign-canvas/src/: camera.rs  colors.rs  controller.rs  gl_loader.rs  layout.rs  lib.rs  lod.rs  minimap.rs  renderer.rs  state.rs
crates/sovereign-comms/: Cargo.toml
crates/sovereign-comms/src/: channel.rs  config.rs  error.rs  lib.rs  pii_hook.rs  sync_engine.rs
crates/sovereign-comms/src/channels/: email.rs  helpers.rs  mod.rs  signal.rs  whatsapp.rs
crates/sovereign-core/: Cargo.toml
crates/sovereign-core/src/: auth.rs  config.rs  content.rs  interfaces.rs  lib.rs  lifecycle.rs  profile.rs  security.rs
crates/sovereign-crypto/: Cargo.toml
crates/sovereign-crypto/src/: account_key.rs  aead.rs  auth.rs  canary.rs  device_key.rs  document_key.rs  error.rs  fs_private.rs  index_key.rs  kek.rs  key_db.rs  keystroke.rs  lib.rs  mac.rs  master_key.rs  migration.rs  pair_payload.rs  password_gen.rs  vault.rs
crates/sovereign-crypto/src/guardian/: mod.rs  recovery.rs  shamir.rs  shard.rs
crates/sovereign-db/: Cargo.toml
crates/sovereign-db/src/: encrypted.rs  error.rs  layered.rs  lib.rs  mock.rs  schema.rs  surreal.rs  traits.rs
crates/sovereign-p2p/: Cargo.toml
crates/sovereign-p2p/src/: backup.rs  backup_client.rs  backup_host.rs  behaviour.rs  config.rs  error.rs  identity.rs  lib.rs  node.rs  pairing.rs  pairing_client.rs  pairing_offer.rs  sync_engine.rs  sync_service.rs  version_store.rs
crates/sovereign-p2p/src/protocol/: guardian.rs  manifest.rs  mod.rs  sync.rs
crates/sovereign-p2p/tests/: e2e_backup.rs  e2e_pairing.rs  e2e_sync.rs
crates/sovereign-skills/: Cargo.toml
crates/sovereign-skills/src/: content_util.rs  db_bridge.rs  lib.rs  manifest.rs  markdown_util.rs  registry.rs  test_util.rs  traits.rs
crates/sovereign-skills/src/skills/: backlink_map.rs  csv_to_md.rs  daily_journal.rs  duplicate_document.rs  file_import.rs  find_replace.rs  html_export.rs  image.rs  json_yaml_formatter.rs  link_checker.rs  markdown_editor.rs  mod.rs  orphan_finder.rs  outline_extractor.rs  pdf_export.rs  pii_detector.rs  plaintext_export.rs  readability_score.rs  redactor.rs  search.rs  table_of_contents.rs  text_editor.rs  thread_summary.rs  video.rs  word_count.rs
crates/sovereign-skills/src/wasm/: host_bridge.rs  mod.rs  runner.rs  wasm_skill.rs
crates/sovereign-ui/: Cargo.toml
crates/sovereign-ui/src/: app.rs  bubble_canvas.rs  chat.rs  lib.rs  login.rs  onboarding.rs  orchestrator_bubble.rs  search.rs  taskbar.rs  theme.rs
crates/sovereign-ui/src/panels/: camera_panel.rs  contact_panel.rs  document_panel.rs  inbox_panel.rs  mod.rs  model_panel.rs
doc/: writing-skills.md
frontend/: package-lock.json  package.json  vite.config.ts  vitest-setup.ts  vitest.config.ts
jiminy-bridge/: audio_stream.py  emotions.py  main.py  requirements.txt  setup_piper.py  stt_listen.py  test_sidecar.py  tts_engine.py
jiminy-vision/: README.md  requirements.txt  test_vision_service.py  vision_service.py
scripts/: download-models.sh  tauri-build-frontend.cjs
sovereign-chatbot/: README.md  app.py  build_index.py  requirements.txt
spike-1-skia-gtk4/: Cargo.toml  build.rs  setup.sh
spike-1-skia-gtk4/src/: main.rs
spike-2-surrealdb-bench/: .gitignore  Cargo.toml  README.md
spike-2-surrealdb-bench/src/: benchmark.rs  generator.rs  main.rs  schema.rs
spike-3-llm-inference/: Cargo.toml  README.md
spike-3-llm-inference/.cargo/: config.toml
spike-3-llm-inference/src/: backend.rs  benchmark.rs  llm.rs  main.rs
website/: detail-action-gravity.html  detail-ai-orchestrator.html  detail-communications.html  detail-content-skills.html  detail-encryption.html  detail-ethics.html  index.html  robots.txt  (+8 more)
(+194 files in other folders)
