[workspace]
resolver = "2"
exclude = []
members = [
    "crates/sovereign-core",
    "crates/sovereign-db",
    "crates/sovereign-crypto",
    "crates/sovereign-skills",
    "crates/sovereign-ui",
    "crates/sovereign-canvas",
    "crates/sovereign-ai",
    "crates/sovereign-p2p",
    "crates/sovereign-comms",
    "crates/sovereign-app",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Database
surrealdb = { version = "2.6", features = ["kv-mem", "kv-rocksdb"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
sovereign-core = { path = "crates/sovereign-core" }
sovereign-db = { path = "crates/sovereign-db" }
sovereign-skills = { path = "crates/sovereign-skills" }
sovereign-ui = { path = "crates/sovereign-ui" }
sovereign-canvas = { path = "crates/sovereign-canvas" }
sovereign-ai = { path = "crates/sovereign-ai", default-features = false }
sovereign-crypto = { path = "crates/sovereign-crypto" }
sovereign-p2p = { path = "crates/sovereign-p2p" }
sovereign-comms = { path = "crates/sovereign-comms" }

# LLM inference
llama-cpp-2 = "0.1"
encoding_rs = "0.8"


# PDF generation
genpdf = "0.2"

# PDF text extraction
pdf-extract = "0.10"

# UI framework
iced = { version = "0.14", features = ["tokio", "wgpu", "image"] }
bytemuck = { version = "1.0", features = ["derive"] }
wgpu = "24"
rfd = "0.17"

# Voice pipeline
whisper-rs = "0.15"
cpal = "0.17"
rustpotter = "3.0"
ringbuf = "0.4"
