[workspace]
resolver = "2"
exclude = ["skills/word-count-wasm"]
members = [
    "crates/sovereign-core",
    "crates/sovereign-db",
    "crates/sovereign-crypto",
    "crates/sovereign-skills",
    "crates/sovereign-ai",
    "crates/sovereign-p2p",
    "crates/sovereign-comms",
    "crates/sovereign-app",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Database
surrealdb = { version = "2.6", features = ["kv-mem"] }
# kv-rocksdb is NOT enabled here — sovereign-db gates it behind its own
# `rocksdb` feature so Android builds (which can't compile RocksDB's C++)
# get kv-mem only. Desktop builds re-enable it via sovereign-app's default
# features. See crates/sovereign-db/Cargo.toml.

# Time
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
sovereign-core = { path = "crates/sovereign-core" }
sovereign-db = { path = "crates/sovereign-db" }
sovereign-skills = { path = "crates/sovereign-skills" }
sovereign-ai = { path = "crates/sovereign-ai", default-features = false }
sovereign-crypto = { path = "crates/sovereign-crypto" }
sovereign-p2p = { path = "crates/sovereign-p2p" }
sovereign-comms = { path = "crates/sovereign-comms" }

# LLM inference
llama-cpp-2 = "0.1.136"
encoding_rs = "0.8"


# PDF generation
genpdf = "0.2"

# PDF text extraction
pdf-extract = "0.10"

# Markdown parsing / rendering (used by HTML Export, Plaintext Export)
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }

# Regex (used by Link Checker, PII Detector)
regex = "1.12"

# YAML parsing (maintained fork of serde_yaml; used by JSON/YAML Formatter)
serde_yml = "0.0.12"

# CSV parsing (used by CSV → Markdown Table)
csv = "1.4"

# WASM plugin runtime
wasmtime = { version = "44", features = ["component-model"] }

# Crypto primitives (also used directly by sovereign-ai encrypted-log)
sha2 = "0.10"
base64 = "0.22"

# Lock-free atomic Arc swap, used by sovereign-db's LayeredGraphDB to
# replace the inner GraphDB after login (raw SurrealGraphDB → EncryptedGraphDB).
arc-swap = "1.9.1"

# UUID
uuid = { version = "1.20", features = ["v4"] }

# RNG
rand = "0.10"

# Tauri (Svelte 5 web UI)
tauri = { version = "2.10", features = ["devtools", "unstable"] }
tauri-build = { version = "2.5", features = [] }

# Voice pipeline
whisper-rs = "0.15"
cpal = "0.17"
rustpotter = "3.0"
ringbuf = "0.4"

# WebSocket client (for Jiminy audio streaming)
tokio-tungstenite = "0.28"
futures-util = "0.3"

# HTTP client (Jiminy bridge needs "json" POST bodies; web browsing needs "rustls" TLS)
reqwest = { version = "0.13", features = ["json", "rustls"] }

# Web browsing
readability = "0.3"
url = "2.5"

# Force the whole dep graph onto Signal's curve25519-dalek fork.
# zkgroup (via presage → libsignal-service → libsignal) needs the fork's
# unstable internals; without this patch two copies of curve25519-dalek
# end up in the build and zkgroup fails with RistrettoPoint/Scalar type
# mismatches across crate identities.
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }
