[package]
name = "spike-2-surrealdb-bench"
version = "0.1.0"
edition = "2021"
description = "Validation spike: SurrealDB embedded performance benchmark"

[dependencies]
surrealdb = { version = "2.6", features = ["kv-mem", "kv-rocksdb"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
