[package]
name = "sovereign-ai"
version = "0.1.0"
edition = "2021"
description = "AI orchestrator with llama.cpp inference (Phase 3)"

[dependencies]
sovereign-core = { workspace = true }
sovereign-db = { workspace = true }
sovereign-skills = { workspace = true }
sovereign-crypto = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
llama-cpp-2 = { workspace = true }
encoding_rs = { workspace = true }

# Voice pipeline (optional — whisper-rs embeds ggml which conflicts with llama-cpp on Windows)
whisper-rs = { workspace = true, optional = true }
cpal = { workspace = true, optional = true }
ringbuf = { workspace = true, optional = true }

# Wake word (optional due to candle-core version conflicts)
rustpotter = { workspace = true, optional = true }

# Optional P2P deps
sovereign-p2p = { workspace = true, optional = true }

# Jiminy (Reachy Mini) bridge
reqwest = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

# Encrypted session log deps
sha2 = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

[dev-dependencies]
sovereign-db = { workspace = true, features = ["test-utils"] }

[features]
default = ["cuda", "encrypted-log"]
cuda = ["llama-cpp-2/cuda"]
voice-stt = ["whisper-rs", "cpal", "ringbuf"]
wake-word = ["voice-stt", "rustpotter"]
p2p = ["sovereign-p2p"]
encrypted-log = ["sha2", "base64"]
jiminy = ["reqwest", "tokio-tungstenite", "futures-util", "ringbuf"]
vision = ["reqwest"]
