[package]
name = "sovereign-app"
version = "0.0.5"
edition = "2021"
description = "Sovereign GE binary — CLI and GUI entry point"

[[bin]]
name = "sovereign"
path = "src/main.rs"

# Android requires a cdylib for the JNI entry point. Desktop links the
# rlib from main.rs. The lib re-exports `run()` (mobile entrypoint) and
# `run_cli()` (desktop entrypoint that parses argv). Lib name defaults
# to the package name with hyphens → underscores (`sovereign_app`).
[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
sovereign-core = { workspace = true }
sovereign-db = { workspace = true }
sovereign-skills = { workspace = true }
sovereign-ai = { workspace = true, default-features = false }
tokio = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }

# Tauri (Svelte 5 web UI — the only supported frontend)
tauri = { workspace = true }

# Cookie type used by tauri::Webview::cookies() / delete_cookie().
# Tauri 2.10 depends on this crate but doesn't re-export it.
cookie = "0.18"

# Optional crypto / P2P deps
sovereign-crypto = { workspace = true, optional = true }
sovereign-p2p = { workspace = true, optional = true }
sovereign-comms = { workspace = true, optional = true }
rpassword = { version = "7.3", optional = true }
uuid = { workspace = true, optional = true }
rand = { version = "0.10", optional = true }

# Session log encryption key derivation
hkdf = { version = "0.12", optional = true }
sha2 = { workspace = true, optional = true }

# Web browsing (optional)
reqwest = { workspace = true, optional = true }
readability = { workspace = true, optional = true }

# Haptics (iOS UIImpactFeedbackGenerator / Android VibratorService)
tauri-plugin-haptics = { version = "2.3.2", optional = true }

[build-dependencies]
tauri-build = { workspace = true }

[dev-dependencies]
tempfile = "3"
sovereign-db = { workspace = true, features = ["test-utils"] }

[features]
# rocksdb: desktop persistent backend. Excluded from `mobile` because RocksDB
# doesn't have a clean Android cross-compile path.
# surrealkv: mobile persistent backend, pure-Rust, cross-compiles cleanly.
# At runtime sovereign-db picks rocksdb first if both are on (see surreal.rs).
default = ["encrypted-log", "encryption", "rocksdb"]
rocksdb = ["sovereign-db/rocksdb"]
surrealkv = ["sovereign-db/surrealkv"]
cuda = ["sovereign-ai/cuda"]
encrypted-log = ["sovereign-ai/encrypted-log", "hkdf", "sha2"]
voice-stt = ["sovereign-ai/voice-stt"]
encryption = ["sovereign-crypto", "sovereign-db/encryption", "rpassword", "uuid", "rand"]
p2p = ["encryption", "sovereign-p2p", "sovereign-ai/p2p"]
comms = ["sovereign-comms"]
comms-email = ["comms", "sovereign-comms/email"]
comms-signal = ["comms", "sovereign-comms/signal"]
comms-whatsapp = ["comms", "sovereign-comms/whatsapp"]
wasm-plugins = ["sovereign-skills/wasm-plugins"]
web-browse = ["reqwest", "readability"]
jiminy = ["sovereign-ai/jiminy"]
# reqwest: the gesture-listen trigger POSTs /listen to the jiminy-bridge.
vision = ["sovereign-ai/vision", "reqwest"]
wake-word = ["sovereign-ai/wake-word"]
haptics = ["tauri-plugin-haptics"]

# Mobile (iOS / Android) feature set.
# Excludes desktop-only deps: voice (cpal-based), email (native-tls),
# P2P (libp2p mDNS restrictions), embedded browser (pixel-bounded child webview).
# Persistence is via surrealkv (pure-Rust KV; RocksDB doesn't cross-compile
# cleanly to Android).
# Signal (comms-signal) is deferred to v0.0.6: presage's Manager stream holds
# a !Send ThreadRng, which is incompatible with CommunicationChannel's
# Send-bound async_trait. A LocalSet-backed wrapper is needed before
# re-adding it here.
mobile = ["encrypted-log", "encryption", "haptics", "surrealkv"]
