[package]
name = "sovereign-canvas"
version = "0.1.0"
edition = "2021"
description = "Spatial canvas with Skia rendering via Iced Shader widget"

[dependencies]
sovereign-core = { workspace = true }
sovereign-db = { workspace = true }
iced = { workspace = true }
bytemuck = { workspace = true }
skia-safe = "0.91"
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
surrealdb = { workspace = true }
