[package]
name = "sovereign-comms"
version = "0.1.0"
edition = "2021"
description = "Unified communications: channel abstraction, sync engine, and protocol implementations"

[dependencies]
sovereign-core = { workspace = true }
sovereign-db = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }

# Email (optional)
lettre = { version = "0.11", optional = true }
async-imap = { version = "0.11", optional = true }
async-native-tls = { version = "0.5", optional = true }
mailparse = { version = "0.16", optional = true }

# Signal (optional) — presage is git-only, not on crates.io
presage = { git = "https://github.com/whisperfish/presage", tag = "0.7.0", optional = true }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage", tag = "0.7.0", optional = true }
futures = { version = "0.3", optional = true }

# WhatsApp Cloud API (optional)
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
default = []
email = ["lettre", "async-imap", "async-native-tls", "mailparse"]
signal = ["presage", "presage-store-sqlite", "futures"]
whatsapp = ["reqwest"]
