[package]
name = "sovereign-core"
version = "0.1.0"
edition = "2021"
description = "Core configuration, lifecycle, and interface definitions for Sovereign GE"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.20", features = ["v4"] }
rand = { workspace = true }
