[package]
name = "sovereign-crypto"
version = "0.1.0"
edition = "2021"
description = "Key hierarchy, AEAD encryption, and Guardian social recovery for Sovereign OS"

[dependencies]
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.10"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
base64 = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dependencies.blahaj]
version = "0.6"
optional = true

[features]
default = ["guardian"]
guardian = ["blahaj"]
