[package]
name = "sovereign-db"
version = "0.1.0"
edition = "2021"
description = "Database layer with GraphDB trait and SurrealDB implementation"

[dependencies]
surrealdb = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
