[package]
name = "sovereign-p2p"
version = "0.1.0"
edition = "2021"
description = "P2P device sync and Guardian shard transport for Sovereign GE"

[dependencies]
sovereign-crypto = { workspace = true }
sovereign-db = { workspace = true }
async-trait = { workspace = true }

libp2p = { version = "0.56", features = [
    "tokio",
    "quic",
    "noise",
    "yamux",
    "mdns",
    "rendezvous",
    "request-response",
    "cbor",
    "identify",
    "macros",
    "ed25519",
] }

tokio = { workspace = true }
hkdf = "0.12"
sha2 = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
base64 = "0.22"

[dev-dependencies]
sovereign-db = { workspace = true, features = ["test-utils"] }
