[package]
name = "sovereign-p2p"
version = "0.1.0"
edition = "2021"
description = "P2P device sync and Guardian shard transport for Sovereign GE"

[dependencies]
sovereign-crypto = { workspace = true }
sovereign-db = { workspace = true }
async-trait = { workspace = true }

libp2p = { version = "0.56", features = [
    "tokio",
    "quic",
    "noise",
    "yamux",
    "mdns",
    "rendezvous",
    "request-response",
    "cbor",
    "identify",
    "macros",
    "ed25519",
] }

tokio = { workspace = true }
rand = { workspace = true }
hkdf = "0.12"
# P4 backup: k-of-n erasure coding of the sealed snapshot.
reed-solomon-erasure = "6.0"
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[dev-dependencies]
sovereign-db = { workspace = true, features = ["test-utils"] }
tracing-subscriber = { workspace = true }
