[package]
name = "sovereign-ui"
version = "0.1.0"
edition = "2021"
description = "Iced UI shell with dark theme, taskbar, and search overlay"

[dependencies]
sovereign-core = { workspace = true }
sovereign-db = { workspace = true }
sovereign-canvas = { workspace = true }
sovereign-skills = { workspace = true }
serde_json = { workspace = true }
iced = { workspace = true }
rfd = { workspace = true }
tracing = { workspace = true }
